--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "require": {
         "php": ">=5.3.3",
         "zendframework/zendframework": ">2.1.3",
-		"doctrine/doctrine-mongo-odm-module": "dev-master"
+		"doctrine/doctrine-mongo-odm-module": "dev-master",
+        "zendframework/zend-developer-tools": "dev-master"
     }
 }
